# tagrikli.github.io

./: README.md  index.html  pyproject.toml
content/experience/: anydictate.html  astrophysics-website.html  color-recommendation-app.html  commitly.html  cs412-project.html  email-automation.html  image-metadata-translator.html  info-screen.html  kimiko.html  linux-call-recorder.html  meta.yaml  mtg-arena-monitor.html  premiere-csv-markers.html  rhino-matlab-bridge.html  vision-based-edge-occupancy.html  yearbook-website.html
content/thought/: meta.yaml  update-rules.html  what-is-a-thing.html
docs/: ARCHITECTURE.md  experience.html  index.html  music.html  thought.html
docs/content/experience/: anydictate.html  astrophysics-website.html  color-recommendation-app.html  commitly.html  cs412-project.html  email-automation.html  image-metadata-translator.html  info-screen.html  kimiko.html  linux-call-recorder.html  mtg-arena-monitor.html  premiere-csv-markers.html  rhino-matlab-bridge.html  vision-based-edge-occupancy.html  yearbook-website.html
docs/content/thought/: update-rules.html  what-is-a-thing.html
docs/static/: kimiko-demo.html
docs/static/css/: base.css
docs/static/js/: stars.js
malvolio/: __init__.py  builder.py  cli.py  config.py
public/: experience.html  index.html  music.html  thought.html
public/content/experience/: anydictate.html  astrophysics-website.html  color-recommendation-app.html  commitly.html  cs412-project.html  email-automation.html  kimiko.html  (+8 more)
templates/: base.html  experience.html  index.html  music.html  thought.html
(+1 files in other folders)
