[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malvolio"
version = "0.1.0"
description = "A minimal static site generator for personal webpages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "livereload>=2.7.0",
]

[project.scripts]
malvolio = "malvolio.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["malvolio"]
